force-app/main/default/objects/Bonus_Target__c/Bonus_Target__c.object-meta.xml
<CustomObject>
    <description>Object for storing bonus target information</description>
    <label>Bonus Target</label>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Bonus target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bonus Targets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>