force-app/main/default/objects/Bonus_Target__c/fields/April__c.field-meta.xml
<CustomField>
    <fullName>April__c</fullName>
    <label>April</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>