force-app/main/default/objects/Bonus_Target__c/fields/August__c.field-meta.xml
<CustomField>
    <fullName>August__c</fullName>
    <description>% for target split for new year</description>
    <label>August</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>