force-app/main/default/objects/Bonus_Target__c/fields/Bad_debts__c.field-meta.xml
<CustomField>
    <fullName>Bad_debts__c</fullName>
    <description>Bad debts</description>
    <label>Bad debts</label>
    <length>11</length>
    <type>Text</type>
</CustomField>