force-app/main/default/objects/Bonus_Target__c/fields/Bonus_Currency__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Currency__c</fullName>
    <label>Bonus Currency</label>
    <length>11</length>
    <type>Text</type>
</CustomField>