force-app/main/default/objects/Bonus_Target__c/fields/BONUS_OTE_in_l_c__c.field-meta.xml
<CustomField>
    <fullName>BONUS_OTE_in_l_c__c</fullName>
    <label>BONUS OTE in l.c.</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>