force-app/main/default/objects/Bonus_Target__c/fields/Bonus_split__c.field-meta.xml
<CustomField>
    <fullName>Bonus_split__c</fullName>
    <label>Bonus split, %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>