force-app/main/default/objects/Bonus_Target__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country</description>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>