force-app/main/default/objects/Bonus_Target__c/fields/Current_Year_Target__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Target__c</fullName>
    <label>Current Year Target</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>