force-app/main/default/objects/Bonus_Target__c/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <description>Customer type</description>
    <label>Customer Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>