force-app/main/default/objects/Bonus_Target__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <description>Employee For Upload field used in upload action</description>
    <label>Employee For Upload</label>
    <length>255</length>
    <type>Text</type>
</CustomField>