force-app/main/default/objects/Bonus_Target__c/fields/Employee_user__c.field-meta.xml
<CustomField>
    <fullName>Employee_user__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Employee user</description>
    <label>Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bonus_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>