force-app/main/default/objects/Bonus_Target__c/fields/February__c.field-meta.xml
<CustomField>
    <fullName>February__c</fullName>
    <label>February</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>