force-app/main/default/objects/Bonus_Target__c/fields/Guaranteed_Period_End__c.field-meta.xml
<CustomField>
    <fullName>Guaranteed_Period_End__c</fullName>
    <description>Guaranteed Period End</description>
    <label>Guaranteed Period End</label>
    <type>Date</type>
</CustomField>