force-app/main/default/objects/Bonus_Target__c/fields/Guaranteed_Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Guaranteed_Period_Start__c</fullName>
    <description>Guaranteed Period Start</description>
    <label>Guaranteed Period Start</label>
    <type>Date</type>
</CustomField>