force-app/main/default/objects/Bonus_Target__c/fields/Is_Active_For_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_For_User__c</fullName>
    <formula>OR(Manager_User__c ==  $User.Id, SVP_User__c ==  $User.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Active For User</label>
    <type>Checkbox</type>
</CustomField>