force-app/main/default/objects/Bonus_Target__c/fields/July__c.field-meta.xml
<CustomField>
    <fullName>July__c</fullName>
    <description>% for target split for new year</description>
    <label>July</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>