force-app/main/default/objects/Bonus_Target__c/fields/June__c.field-meta.xml
<CustomField>
    <fullName>June__c</fullName>
    <description>% for target split for new year</description>
    <label>June</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>