force-app/main/default/objects/Bonus_Target__c/fields/LY_Actual__c.field-meta.xml
<CustomField>
    <fullName>LY_Actual__c</fullName>
    <formula>LY_April__c +  LY_August__c + LY_February__c + LY_December__c +LY_January__c + LY_July__c + LY_June__c + LY_March__c + LY_May__c+
	LY_November__c + LY_October__c + LY_September__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LY Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>