force-app/main/default/objects/Bonus_Target__c/fields/LY_January__c.field-meta.xml
<CustomField>
    <fullName>LY_January__c</fullName>
    <label>LY January</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>