force-app/main/default/objects/Bonus_Target__c/fields/LY_July__c.field-meta.xml
<CustomField>
    <fullName>LY_July__c</fullName>
    <label>LY July</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>