force-app/main/default/objects/Bonus_Target__c/fields/LY_March__c.field-meta.xml
<CustomField>
    <fullName>LY_March__c</fullName>
    <label>LY March</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>