force-app/main/default/objects/Bonus_Target__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <description>Manager for Upload used to set text value for user name and after that system will find a valid manager</description>
    <label>Manager For Upload</label>
    <length>255</length>
    <type>Text</type>
</CustomField>