force-app/main/default/objects/Bonus_Target__c/fields/Manager_User__c.field-meta.xml
<CustomField>
    <fullName>Manager_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Manager username</description>
    <label>Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bonus_Targets1</relationshipName>
    <type>Lookup</type>
</CustomField>