force-app/main/default/objects/Bonus_Target__c/fields/March__c.field-meta.xml
<CustomField>
    <fullName>March__c</fullName>
    <label>March</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>