force-app/main/default/objects/Bonus_Target__c/fields/May__c.field-meta.xml
<CustomField>
    <fullName>May__c</fullName>
    <label>May</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>