force-app/main/default/objects/Bonus_Target__c/fields/October__c.field-meta.xml
<CustomField>
    <fullName>October__c</fullName>
    <description>% for target split for new year</description>
    <label>October</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>