force-app/main/default/objects/Bonus_Target__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <description>Office</description>
    <label>Office</label>
    <length>255</length>
    <type>Text</type>
</CustomField>