force-app/main/default/objects/Bonus_Target__c/fields/Previous_Year_Actual__c.field-meta.xml
<CustomField>
    <fullName>Previous_Year_Actual__c</fullName>
    <label>Previous Year Actual</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>