force-app/main/default/objects/Bonus_Target__c/fields/SVP__c.field-meta.xml
<CustomField>
    <fullName>SVP__c</fullName>
    <description>SVP name and surname</description>
    <label>SVP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>