force-app/main/default/objects/Bonus_Target__c/fields/SVP_User__c.field-meta.xml
<CustomField>
    <fullName>SVP_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SVP User in system</description>
    <label>Hige Level</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bonus_Targets2</relationshipName>
    <type>Lookup</type>
</CustomField>