force-app/main/default/objects/Bonus_Target__c/fields/Target_currency__c.field-meta.xml
<CustomField>
    <fullName>Target_currency__c</fullName>
    <label>Target currency</label>
    <length>11</length>
    <type>Text</type>
</CustomField>