force-app/main/default/objects/Bonus_Target__c/fields/Target_ID__c.field-meta.xml
<CustomField>
    <fullName>Target_ID__c</fullName>
    <label>Target ID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>