force-app/main/default/objects/Bonus_Target__c/fields/Target_Q1__c.field-meta.xml
<CustomField>
    <fullName>Target_Q1__c</fullName>
    <formula>Target__c * ( January__c  + February__c + March__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Q1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>