force-app/main/default/objects/Bonus_Target__c/fields/Target_Q2__c.field-meta.xml
<CustomField>
    <fullName>Target_Q2__c</fullName>
    <formula>Target__c * (April__c + May__c + June__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Q2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>