force-app/main/default/objects/Bonus_Target__c/fields/Target_Q3__c.field-meta.xml
<CustomField>
    <fullName>Target_Q3__c</fullName>
    <formula>Target__c * (July__c + August__c + September__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Q3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>