force-app/main/default/objects/Bonus_Target__c/fields/Year_for_target__c.field-meta.xml
<CustomField>
    <fullName>Year_for_target__c</fullName>
    <label>Year for target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>