force-app/main/default/objects/Bonus_Target__c/fields/YoY__c.field-meta.xml
<CustomField>
    <fullName>YoY__c</fullName>
    <description>Year over Year</description>
    <label>YoY %</label>
    <precision>12</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>