force-app/main/default/objects/Bonus_Target__c/fields/YoY_new__c.field-meta.xml
<CustomField>
    <fullName>YoY_new__c</fullName>
    <formula>(Target__c /LY_Actual__c ) - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YoY, %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>